# gVtCalc

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/: CMakeLists.txt  gb_calc.c  gb_calc.h  gb_utils.c  gb_utils.h  gb_vt.c  gb_vt.h  main.c
